2005-12-23  Chris Burdess  <dog@gnu.org>

	* gnu/xml/stream/SAXParser.java,
	  gnu/xml/stream/XMLParser.java: Interim commit during W3C XML
	  conformance testing.

2005-12-22  Lillian Angel  <langel@redhat.com>

	* javax/swing/JInternalFrame.java
	(show): Removed call moveToFront. Listeners already call
	toFront, which calls moveToFront.
	* javax/swing/JLayeredPane.java
	(setPosition): Positions are assigned from the "front" 
	to the "back", and drawn from the back towards the front. Added
	a loop to swap all the components, so they are in the correct 
	layer.

2005-12-22  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/text/DefaultStyledDocument.java:
	(ElementBuffer.insertContentTag): Get the attributes from the tag. 
	Return early if direction is JoinNextDirection but there is no next 
	Element.  
	(createDefaultRoot): Don't call createBranchElement here just 
	instantiate a new BranchElement.
	(insertUpdate): Removed unneeded fields newElement, newElement2.  When
	building the buffer ElementSpecs, no need to check each time if we 
	should join to the previous or next Element, just check the first and
	last ElementSpecs after the buffer has been completely built.

2005-12-22  Tom Tromey  <tromey@redhat.com>

	* .externalToolBuilders/ClasspathJar.launch: New file.
	* .project: Updated.

2005-12-21  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/basic/BasicLookAndFeel.java
	(initComponentDefaults): Added focusInputMaps for
	Button, CheckBox, EditorPane, List, Slider, TabbedPane,
	ToggleButton, Tree. Also, removed TODO comments that
	dealt with icons. BasicLookAndFeel does not have icons.

2005-12-22  Mark Wielaard  <mark@klomp.org>

	* gnu/java/nio/charset/Provider.java (provider): Wrap initialization
	of standard provider in a PrivilegedAction.
	
2005-12-21  Lillian Angel  <langel@redhat.com>
	
	* javax/swing/plaf/basic/BasicLookAndFeel.java
	(initComponentDefaults): Added focus input map for
	EditorPane. Removed keyBindings.